--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,7 @@ div.conteneur2 {
   justify-content: center;
   text-align: center;
   cursor: pointer;
-  border: solid 2px rgb(0, 4, 255);
+  /*border: solid 2px rgb(0, 4, 255);*/
   }
   
 
@@ -343,7 +343,7 @@ div.conteneur2 figure img {
   
   top: 250px;
   z-index: 1;
-  border: solid 2px rgb(0, 4, 255);
+ /* border: solid 2px rgb(0, 4, 255);*/
 }
 
 /*.figcaptionmAKI {
